# 1.03.59 (36577) Nov 12, 2009
the-ramp: In Energy Graph tab, have the total energy be the only line shown as a default.
Fixed: Reset all should reset the visibility of each chart series.
Fixed: chart readouts don't reset when Reset All button is pressed.
Made chart vertical and horizontal axes reset when Reset All button is pressed.
the-ramp: In the Energy Graph tab, changed the default zoom to 10,000 J so the entire curve is visible by default.
forces-and-motion: In Graph tab, have the Force sum be the only line shown as a default.
Added friction coefficients to combo box.
# 1.03.58 (36485) Nov 10, 2009
Fixed combo box in control panel to share code with play area combo box
Added title to object selection combo box in the play area
Converted object selection grid to object combo box in the play area.
Removed custom crate from object selection grid and object selection combo box.
forces-and-motion: Fixed: in force-graphs tab, custom crate in this drop-down box does not have the correct image.
forces-and-motion: Fixed: in Friction tab, object does not change size when you change mass.
# 1.03.57 (36445) Nov 9, 2009
Added internationalization for game modes
Added internationalization for recently added features
Made it so that static friction coefficient is always less than or equal to the kinetic friction coefficient for custom objects.
> Major user interface redesign for the-ramp and forces-and-motion (which replaces forces-1d)
Bugfix in specifying bounds in PNode.toImage call, improves compatibility with Piccolo 1.3
# 1.03.56 (36188) Oct 28, 2009
Updated crate images based on submission from Noah
# 1.03.55 (36162) Oct 27, 2009
Made it so that horizontal chart bounds update when vertical scale is changed
forces-and-motion: Removed objects that cannot be moved, or cannot be delivered to the house.
forces-and-motion: Reduced robot moving company game applied force to match that in the ramp version.